# todo-app-rust

./: Cargo.toml  README.md
readme/: recording.mov
src/: cli.rs  controller.rs  controllers.rs  fs.rs  lib.rs  main.rs  models.rs  repositories.rs  repository.rs
tests/: app_util.rs  e2e.rs
