[package]
edition = "2021"
name = "todo"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
filesystem = "0.4.4"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
tempdir = "0.3.7"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"
